Impl [Nuclio] Move "V3IO" text from Archive to Access Key field

--- a/src/nuclio/projects/project/functions/version/version-code/version-code.tpl.html
+++ b/src/nuclio/projects/project/functions/version/version-code/version-code.tpl.html
@@ -104,7 +104,7 @@
                                                         class="nuclio-validating-input">
                             </igz-validating-input-field>
 
-                            <div class="field-label">Access key</div>
+                            <div class="field-label">Access key (V3IO only)</div>
                             <igz-validating-input-field data-field-type="password"
                                                         data-input-name="sessionKey"
                                                         data-input-value="$ctrl.version.spec.build.codeEntryAttributes.headers['X-V3io-Session-Key']"
