--- a/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-resources/version-configuration-resources.tpl.html
+++ b/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-resources/version-configuration-resources.tpl.html
@@ -34,6 +34,7 @@
                                           data-validation-is-required="false"
                                           data-form-object="$ctrl.resourcesForm"
                                           data-input-name="limitsMemory"
+                                          data-min-value="1"
                                           data-update-number-input-callback="$ctrl.memoryInputCallback(newData, field)"
                                           data-update-number-input-field="spec.resources.limits.memory"
                                           data-current-value="$ctrl.limitsMemoryValue;"
