Fix bug with actions

--- a/src/nuclio/projects/project/functions/function-collapsing-row/function-collapsing-row.tpl.html
+++ b/src/nuclio/projects/project/functions/function-collapsing-row/function-collapsing-row.tpl.html
@@ -61,8 +61,7 @@
             </igz-action-menu>
         </div>
     </div>
-    <div class="items-wrapper" data-ui-sortable="$ctrl.sortableConfig" data-ng-model="$ctrl.layer.ui.children"
-         data-uib-collapse="$ctrl.isCollapsed">
+    <div class="items-wrapper" data-uib-collapse="$ctrl.isCollapsed">
         <div data-ng-repeat="version in $ctrl.function.versions">
             <ncl-function-version-row class="function-version-wrapper"
                                       data-version="version"
