Impl [Nuclio] Configuration>Resources>GPU: "Per replica" tooltip

--- a/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-resources/version-configuration-resources.tpl.html
+++ b/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-resources/version-configuration-resources.tpl.html
@@ -102,7 +102,11 @@
             <div class="igz-row form-row range-inputs-row">
                 <div class="igz-col-10 row-title">GPU</div>
                 <div class="igz-col-40 input-wrapper"></div>
-                <div class="igz-col-40 input-wrapper">
+                <div class="igz-col-40 input-wrapper"
+                     data-uib-tooltip="Per replica"
+                     data-tooltip-append-to-body="true"
+                     data-tooltip-placement="bottom"
+                     data-tooltip-popup-delay="500">
                     <div class="input-title">Limit</div>
                     <div class="row-input gpu-number-input">
                         <igz-number-input data-allow-empty-field="true"
