--- a/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-build/version-configuration-build.tpl.html
+++ b/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-build/version-configuration-build.tpl.html
@@ -102,11 +102,19 @@
                 </igz-validating-input-field>
             </div>
             <div class="igz-col-100 build-field build-checkboxes">
-                <div class="checkbox-block">
+                <div class="checkbox-block"
+                     data-uib-tooltip="Build the function's Docker image from scratch without reusing any previously built Docker image layers"
+                     data-tooltip-placement="bottom"
+                     data-tooltip-append-to-body="true"
+                     data-tooltip-popup-delay="500">
                     <input type="checkbox" class="small" id="noCache" data-ng-model="$ctrl.version.spec.build.noCache">
                     <label for="noCache" class="checkbox-inline">Disable cache</label>
                 </div>
-                <div class="checkbox-block">
+                <div class="checkbox-block"
+                     data-uib-tooltip="Use local Docker images rather than pulling from remote"
+                     data-tooltip-placement="bottom"
+                     data-tooltip-append-to-body="true"
+                     data-tooltip-popup-delay="500">
                     <input type="checkbox" class="small" id="offline" data-ng-model="$ctrl.version.spec.build.offline">
                     <label for="offline" class="checkbox-inline">No internet access</label>
                 </div>
