--- a/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-data-bindings/version-configuration-data-bindings.tpl.html
+++ b/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-data-bindings/version-configuration-data-bindings.tpl.html
@@ -4,7 +4,7 @@
 
         <div class="ncl-version-binding">
             <div class="common-table">
-                <div class="common-table-header item-header">
+                <div data-ng-if="$ctrl.bindings.length > 0" class="common-table-header item-header">
                     <div class="common-table-cell item-name">
                         Name
                     </div>
