--- a/src/nuclio/projects/project/functions/version/version-triggers/version-triggers.tpl.html
+++ b/src/nuclio/projects/project/functions/version/version-triggers/version-triggers.tpl.html
@@ -1,6 +1,6 @@
 <div class="ncl-version-trigger ncl-version">
     <div class="common-table">
-        <div class="common-table-header header-row">
+        <div data-ng-if="$ctrl.triggers.length > 0" class="common-table-header header-row">
             <div class="common-table-cell header-name">
                 Name
             </div>
