--- a/src/nuclio/projects/project/functions/version/version-code/function-event-pane/function-event-pane.tpl.html
+++ b/src/nuclio/projects/project/functions/version/version-code/function-event-pane/function-event-pane.tpl.html
@@ -187,7 +187,7 @@
                                     </div>
                                 </div>
                                 <div class="headers" data-ng-if="$ctrl.selectedRequestTab.id === 'headers'">
-                                    <div class="table-headers">
+                                    <div data-ng-if="$ctrl.headers.length > 0" class="table-headers">
                                         <div class="key-header">Key</div>
                                         <div class="value-header">Value</div>
                                     </div>
