IG-2225 [General] "More info" icon: make as common component (updated)

--- a/src/nuclio/common/screens/create-function/function-from-template/function-from-template-dialog/function-from-template-dialog.tpl.html
+++ b/src/nuclio/common/screens/create-function/function-from-template/function-from-template-dialog/function-from-template-dialog.tpl.html
@@ -52,9 +52,9 @@
 
             <div class="igz-col-5">
                 <igz-more-info data-ng-if="field.description"
-                               data-is-tooltip-enabled="true"
-                               data-tooltip-placement="bottom"
-                               data-tooltip-popup-delay="200"
+                               data-is-default-tooltip-enabled="true"
+                               data-default-tooltip-placement="bottom"
+                               data-default-tooltip-popup-delay="200"
                                data-description="{{field.description}}">
                 </igz-more-info>
             </div>
