--- a/src/nuclio/projects/project/functions/version/version-code/version-code.tpl.html
+++ b/src/nuclio/projects/project/functions/version/version-code/version-code.tpl.html
@@ -47,6 +47,7 @@
                              class="code-edit-section">
                             <div class="code-editor-drop-zone"></div>
                             <ncl-monaco class="monaco-code-editor"
+                                        igz-extend-background
                                         data-function-source-code="$ctrl.sourceCode"
                                         data-mini-monaco="false"
                                         data-selected-theme="$ctrl.selectedTheme.id"
